Override bootstrap's 100% width table to avoid stretched out columns for long expressions

--- a/birdseye/static/css/main.css
+++ b/birdseye/static/css/main.css
@@ -143,7 +143,8 @@ body > .container {
     height: auto;
 }
 
-table.dataframe {
+table.dataframe.table {
+    width: auto;
     font-size: 9pt;
     margin: 5px;
     border: 2px solid black;
